force-app/main/default/objects/AWS_Event__c/AWS_Event__c.object-meta.xml
<CustomObject>
    <label>AWS Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>AWS Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>