force-app/main/default/objects/AWS_Event__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>