force-app/main/default/objects/AWS_Event__c/fields/Dynamo_Stream__c.field-meta.xml
<CustomField>
    <fullName>Dynamo_Stream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dynamo Stream</label>
    <referenceTo>Dynamo_Stream_Shadow__c</referenceTo>
    <relationshipLabel>AWS Events</relationshipLabel>
    <relationshipName>AWS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>