force-app/main/default/objects/AWS_Event__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>