force-app/main/default/objects/AWS_Event__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>EventId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>