force-app/main/default/objects/AWS_Event__c/fields/GMT_Time__c.field-meta.xml
<CustomField>
    <fullName>GMT_Time__c</fullName>
    <formula>TEXT(DATETIMEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT Time</label>
    <type>Text</type>
</CustomField>