force-app/main/default/objects/AWS_Event__c/fields/Info_1__c.field-meta.xml
<CustomField>
    <fullName>Info_1__c</fullName>
    <label>Table</label>
    <length>80</length>
    <type>Text</type>
</CustomField>