force-app/main/default/objects/AWS_Event__c/fields/Info_2__c.field-meta.xml
<CustomField>
    <fullName>Info_2__c</fullName>
    <label>Info 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>