force-app/main/default/objects/AWS_Event__c/fields/Info_3__c.field-meta.xml
<CustomField>
    <fullName>Info_3__c</fullName>
    <label>Info 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>