force-app/main/default/objects/AWS_Event__c/fields/Retry_Error__c.field-meta.xml
<CustomField>
    <fullName>Retry_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Error</label>
    <type>Checkbox</type>
</CustomField>